Fixing notebook theory

--- a/notebook/MPC_cte_cvxpy.ipynb
+++ b/notebook/MPC_cte_cvxpy.ipynb
@@ -87,9 +87,9 @@
     "= \n",
     "\\quad\n",
     "\\begin{bmatrix}\n",
-    "\\cos{\\theta_t}dt & 0 \\\\\n",
-    "\\sin{\\theta_t}dt & 0 \\\\\n",
-    "0 & dt\n",
+    "\\cos{\\theta_t} & 0 \\\\\n",
+    "\\sin{\\theta_t} & 0 \\\\\n",
+    "0 & 1\n",
     "\\end{bmatrix}\n",
     "\\quad\n",
     "$\n",
@@ -165,6 +165,13 @@
     "\n",
     "-----------------"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
