WIP: racecar mpc

--- a/notebooks/MPC_cte_cvxpy.ipynb
+++ b/notebooks/MPC_cte_cvxpy.ipynb
@@ -36,17 +36,19 @@
     "\n",
     "These are the differential equations f(x,u) of the model:\n",
     "\n",
+    "$\\dot{x} = f(x,u)$\n",
+    "\n",
     "* $\\dot{x} = v\\cos{\\theta}$ \n",
     "* $\\dot{y} = v\\sin{\\theta}$\n",
     "* $\\dot{\\theta} = w$\n",
     "\n",
     "Discretize with forward Euler Integration for time step dt:\n",
     "\n",
-    "${x_{t+1}} = x_{t} + f(x,u)*dt$\n",
+    "${x_{t+1}} = x_{t} + f(x,u)dt$\n",
     "\n",
-    "* ${x_{t+1}} = x_{t} + v_t\\cos{\\theta}*dt$\n",
-    "* ${y_{t+1}} = y_{t} + v_t\\sin{\\theta}*dt$\n",
-    "* ${\\theta_{t+1}} = \\theta_{t} + w_t*dt$\n",
+    "* ${x_{t+1}} = x_{t} + v_t\\cos{\\theta}dt$\n",
+    "* ${y_{t+1}} = y_{t} + v_t\\sin{\\theta}dt$\n",
+    "* ${\\theta_{t+1}} = \\theta_{t} + w_t dt$\n",
     "\n",
     "----------------------\n",
     "\n",
@@ -116,13 +118,7 @@
     "\n",
     "$ B' = dtB|_{x=\\bar{x},u=\\bar{u}} $\n",
     "\n",
-    "$ C' = dt(f(\\bar{x},\\bar{u}) - A|_{x=\\bar{x},u=\\bar{u}}\\bar{x} - B|_{x=\\bar{x},u=\\bar{u}}\\bar{u}) $\n",
-    "\n",
-    "**Errors** are:\n",
-    "* $\\psi$ heading error = $\\psi = \\theta_{ref} - \\theta$\n",
-    "* $cte$ crosstrack error = lateral distance of the robot from the track w.r.t robot frame, cte is a function of the track and x\n",
-    "\n",
-    "described by:"
+    "$ C' = dt(f(\\bar{x},\\bar{u}) - A|_{x=\\bar{x},u=\\bar{u}}\\bar{x} - B|_{x=\\bar{x},u=\\bar{u}}\\bar{u}) $"
    ]
   },
   {
