--- a/notebooks/equations.ipynb
+++ b/notebooks/equations.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "[0, 0,             0, v*cos(psi), 0]])"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "[  sin(psi),  0]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "[0, 0,                1]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "[            0, dt]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,27 +156,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}0 & 0 & \\cos{\\left(\\theta \\right)} & - v \\sin{\\left(\\theta \\right)}\\\\0 & 0 & \\sin{\\left(\\theta \\right)} & v \\cos{\\left(\\theta \\right)}\\\\0 & 0 & 0 & 0\\\\0 & 0 & \\frac{\\tan{\\left(\\delta \\right)}}{L} & 0\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[0, 0,   cos(theta), -v*sin(theta)],\n",
-       "[0, 0,   sin(theta),  v*cos(theta)],\n",
-       "[0, 0,            0,             0],\n",
-       "[0, 0, tan(delta)/L,             0]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x,y,theta,v,delta,L,a = sp.symbols(\"x y theta v delta L a\")\n",
     "\n",
@@ -185,15 +167,20 @@
     "               [a],\n",
     "               [ v*sp.tan(delta)/L]])\n",
     "\n",
-    "state = sp.Matrix([x,y,v,theta])\n",
+    "X = sp.Matrix([x,y,v,theta])\n",
     "\n",
     "#A\n",
-    "gs.jacobian(state)"
+    "A=gs.jacobian(X)\n",
+    "\n",
+    "U = sp.Matrix([a,delta])\n",
+    "\n",
+    "#B\n",
+    "B=gs.jacobian(U)#.subs({x:0,y:0,theta:0})B="
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -209,16 +196,96 @@
        "[0, v*(tan(delta)**2 + 1)/L]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "state = sp.Matrix([a,delta])\n",
-    "\n",
-    "#B\n",
-    "gs.jacobian(state)#.subs({x:0,y:0,theta:0})"
+    "B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}1 & 0 & dt \\cos{\\left(\\theta \\right)} & - dt v \\sin{\\left(\\theta \\right)}\\\\0 & 1 & dt \\sin{\\left(\\theta \\right)} & dt v \\cos{\\left(\\theta \\right)}\\\\0 & 0 & 1 & 0\\\\0 & 0 & \\frac{dt \\tan{\\left(\\delta \\right)}}{L} & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[1, 0,   dt*cos(theta), -dt*v*sin(theta)],\n",
+       "[0, 1,   dt*sin(theta),  dt*v*cos(theta)],\n",
+       "[0, 0,               1,                0],\n",
+       "[0, 0, dt*tan(delta)/L,                1]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#A LIN\n",
+    "DT = sp.symbols(\"dt\")\n",
+    "sp.eye(4)+A*DT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}0 & 0\\\\0 & 0\\\\dt & 0\\\\0 & \\frac{dt v \\left(\\tan^{2}{\\left(\\delta \\right)} + 1\\right)}{L}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[ 0,                          0],\n",
+       "[ 0,                          0],\n",
+       "[dt,                          0],\n",
+       "[ 0, dt*v*(tan(delta)**2 + 1)/L]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B*DT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}dt \\theta v \\sin{\\left(\\theta \\right)}\\\\- dt \\theta v \\cos{\\left(\\theta \\right)}\\\\0\\\\- \\frac{\\delta dt v \\left(\\tan^{2}{\\left(\\delta \\right)} + 1\\right)}{L}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[            dt*theta*v*sin(theta)],\n",
+       "[           -dt*theta*v*cos(theta)],\n",
+       "[                                0],\n",
+       "[-delta*dt*v*(tan(delta)**2 + 1)/L]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DT*(gs - A*X - B*U)"
    ]
   },
   {
@@ -421,6 +488,8 @@
    "metadata": {},
    "source": [
     "It is necessary to take *actuation latency* into account: so instead of using the actual state as estimated, the delay factored in using the kinematic model\n",
+    "\n",
+    "Starting State is :\n",
     "\n",
     "* $x_{delay} = 0.0 + v * dt$\n",
     "* $y_{delay} = 0.0$\n",
