added input delay in sim

--- a/notebooks/MPC_racecar.ipynb
+++ b/notebooks/MPC_racecar.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "The inputs of the model are:\n",
     "\n",
-    "* $v$ linear velocity of the robot\n",
+    "* $a$ acceleration of the robot\n",
     "* $\\delta$ angular velocity of the robot\n",
     "\n",
     "These are the differential equations f(x,u) of the model:\n",
@@ -715,7 +715,6 @@
     "u_bar[0,:]=0.5\n",
     "u_bar[1,:]=0.1\n",
     "\n",
-    "    \n",
     "K=road_curve(x0,track)\n",
     "\n",
     "# dynamics starting state w.r.t vehicle frame\n",
@@ -728,7 +727,6 @@
     "    A,B,C=get_linear_model(xt,ut)\n",
     "    xt_plus_one = np.squeeze(np.dot(A,xt)+np.dot(B,ut)+C)\n",
     "    x_bar[:,t]= xt_plus_one\n",
-    "    \n",
     "\n",
     "x = cp.Variable((N, T+1))\n",
     "u = cp.Variable((M, T))\n",
