--- a/notebooks/equations.ipynb
+++ b/notebooks/equations.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "       -0.58083993])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -475,12 +475,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## With BSLINES"
+    "## With SPLINES"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -523,10 +523,9 @@
     "\n",
     "#fit poly\n",
     "import scipy\n",
-    "from scipy.interpolate import BSpline\n",
+    "from scipy.interpolate import CubicSpline\n",
     "from scipy.interpolate import PPoly,splrep\n",
     "spl=splrep(wp_vehicle_frame[0,:], wp_vehicle_frame[1,:])\n",
-    "coeff\n",
     "print( spl)\n",
     "print(PPoly.from_spline(spl).c)\n",
     "#coeff=np.polyfit(wp_vehicle_frame[0,:], wp_vehicle_frame[1,:], 5, rcond=None, full=False, w=None, cov=False)\n",
@@ -534,6 +533,30 @@
     "#def f(x,coeff):\n",
     "#    return coeff[0]*x**3+coeff[1]*x**2+coeff[2]*x**1+coeff[3]*x**0\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def spline_planning(qs, qf, ts, tf, dqs=0.0, dqf=0.0, ddqs=0.0, ddqf=0.0):\n",
+    "    \n",
+    "    bc = np.array([ys, dys, ddys, yf, dyf, ddyf]).T \n",
+    "    \n",
+    "    C = np.array([[1,    xs,    xs**2,   xs**3,    xs**4,    xs**5],    #f(xs)=ys\n",
+    "                  [0,     1,  2*xs**1, 3*xs**2,  4*xs**3,  5**xs^4],    #df(xs)=dys\n",
+    "                  [0,     0,        1, 6*xs**1, 12*xs**2, 20**xs^3],    #ddf(xs)=ddys\n",
+    "                  [1,    xf,    xf**2,   xf**3,    xf**4,    xf**5],    #f(xf)=yf\n",
+    "                  [0,     1,  2*xf**1, 3*xf**2,  4*xf**3,  5**xf^4],    #df(xf)=dyf\n",
+    "                  [0,     0,        1, 6*xf**1, 12*xf**2, 20**xf^3]])   #ddf(xf)=ddyf\n",
+    "    \n",
+    "    #To compute the polynomial coefficients we solve:\n",
+    "    #Ax = B. \n",
+    "    #Matrices A and B must have the same number of rows\n",
+    "    a = np.linalg.lstsq(C,bc)[0]\n",
+    "    return a"
    ]
   },
   {
@@ -577,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
