updated README to latest version

--- a/notebooks/MPC_racecar_tracking.ipynb
+++ b/notebooks/MPC_racecar_tracking.ipynb
@@ -634,7 +634,7 @@
     "$\n",
     "\\begin{equation}\n",
     "\\begin{aligned}\n",
-    "\\min_{} \\quad &  \\sum^{t+T-1}_{j=t} (x_{j} - x_{j,ref})^TQ(x_{j} - x_{j,ref}) + \\sum^{t+T-1}_{j=t+1} u^T_{j}Ru_{j} + (u_{j} - u_{j-1})^T(u_{j} - u_{j-1}) \\\\\n",
+    "\\min_{} \\quad &  \\sum^{t+T-1}_{j=t} (x_{j} - x_{j,ref})^TQ(x_{j} - x_{j,ref}) + \\sum^{t+T-1}_{j=t+1} u^T_{j}Ru_{j} + (u_{j} - u_{j-1})^TP(u_{j} - u_{j-1}) \\\\\n",
     "\\textrm{s.t.} \\quad &  x(0) = x0\\\\\n",
     "  & x_{j+1} = Ax_{j}+Bu_{j} \\quad  \\textrm{for} \\quad t<j<t+T-1  \\\\\n",
     "  & u_{MIN} < u_{j} < u_{MAX} \\quad  \\textrm{for} \\quad t<j<t+T-1 \\\\\n",
